--- a/index.html
+++ b/index.html
@@ -77,5 +77,6 @@
     </footer>
     <script src="https://kit.fontawesome.com/ef3eea8822.js" crossorigin="anonymous"></script>
     <script src="./ejemplos/sincrono.js"></script>
+    <script src="./ejemplos/callback.js"></script>
 </body>
 </html>
