--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <p class="footer__text">Desarrollado por Alura Latam</p>
     </footer>
     <script src="https://kit.fontawesome.com/ef3eea8822.js" crossorigin="anonymous"></script>
-    <script src="./ejemplos/sincrono.js"></script>
-    <script src="./ejemplos/callback.js"></script>
+    <script src="script.js"></script>
+
 </body>
 </html>
